# memstore

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
include/: CommandHandler.h  Database.h  Server.h
lib/: catch2_main.cpp
src/: CommandHandler.cpp  Database.cpp  Server.cpp  main.cpp
test/: test_command_handler.cpp
